alignment of all alert boxes set to center (fixed)

--- a/form-style.css
+++ b/form-style.css
@@ -7,12 +7,10 @@
 .index_alert_box {
     position: absolute;
     top: 10px;
-    margin: auto;
-    left: 0;
-    right: 0;
     display: flex;
     justify-content: space-around;
     align-items: center;
+	align-self: center;
     z-index: 2;
     color: azure;
 	background-color: rgba(0, 0, 255, 0.826);
